Update page - masks-and-ppe.html 60934bb0e63d12f6ec8a1ef46fa5e0a7f7676732

--- a/masks-and-ppe/index.html
+++ b/masks-and-ppe/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Masks</h1>
           
-            <p class="small-text">Last updated&nbsp;March 10, 2021 at 1:32 PM</p>
+            <p class="small-text">Last updated&nbsp;March 10, 2021 at 1:58 PM</p>
           
         </div>
       </div>
@@ -173,7 +173,7 @@
 
 
 
-<p>Coronavirus spreads when an infected person coughs, sneezes, sings, talks, or breathes within 6 feet of others. You may be infected even if you feel well.</p>
+<p>Coronavirus spreads when an infected person coughs, sneezes, sings, talks, or breathes and is in close contact with or in an indoor space with others. You may be infected even if you feel well. Virus particles can travel at least 6 feet in indoor spaces and can remain suspended in air even after an infected person has left the space. Indoor settings pose a much higher risk of transmission than outdoor settings.</p>
 
 
 
@@ -283,7 +283,7 @@
 
 
 
-<p>KN95s are respirators made designed to provide a specific level of protection. But KN95 respirators have not gone through the same strict testing as N95s.&nbsp;</p>
+<p>KN95s are respirators designed to provide a specific level of protection. But KN95 respirators have not gone through the same strict testing as N95s. </p>
 
 
 
