--- a/zh-hans/latest-news/index.html
+++ b/zh-hans/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>有关COVID-19的最新消息</h1>
           
-            <p class="small-text">最后更新时间&nbsp;March 10, 2021 at 2:17 PM</p>
+            <p class="small-text">最后更新时间&nbsp;March 10, 2021 at 2:21 PM</p>
           
         </div>
       </div>
@@ -163,6 +163,14 @@
           </h2>
           <p class="card-text" lang="en-US"><small class="text-muted"><!--47071 -->March 9, 2021</small></p>
           <div class="card-text" lang="en-US">Governor delivers remarks at Dodger Stadium, one of the nation’s largest community vaccination sites LOS ANGELES – As California passes a year into the COVID-19 pandemic, Governor Gavin Newsom today delivered his third S...</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR21-081.aspx" lang="en-US" hreflang="en-US" rel="external">State Officials Announce Latest COVID-19 Facts&nbsp;(#348)</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--45ca2801a14805dd8ea6298901a379a7 -->March 9, 2021</small></p>
+          <div class="card-text" lang="en-US">Today, the California Department of Public Health (CDPH) released the most recent statistics on COVID-19.</div>
         </div>
       </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
