Update page - business-and-employers.html f70225cb7f36bee189b0020a7eb8ac1394c8f3df

--- a/business-and-employers/index.html
+++ b/business-and-employers/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Businesses and employers</h1>
           
-            <p class="small-text">Last updated&nbsp;February 10, 2021 at 4:46 PM</p>
+            <p class="small-text">Last updated&nbsp;March 10, 2021 at 3:18 PM</p>
           
         </div>
       </div>
@@ -165,7 +165,7 @@
 
 
 
-<ul><li><strong><a href="#grants-and-loans">Grants and loans</a></strong></li><li><strong><a href="#other-small-business-help">Other help for small businesses</a></strong></li><li><strong><a href="#managing-covid">How to manage COVID-19 in the workplace</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="#grants-and-loans">Grants and loans</a></strong></li><li><strong><a href="#other-small-business-help">Other help for small businesses</a></strong></li><li><strong><a href="#managing-covid">How to manage COVID-19 in the workplace</a></strong></li></ul>
 
 
 
@@ -257,7 +257,7 @@
 
 
 
-<ul><li>The <a href="https://files.covid19.ca.gov/pdf/employer-playbook-for-safe-reopening--en.pdf">employer playbook</a> to help plan and prepare your business for reopening</li><li>The <a href="https://covid19.ca.gov/industry-guidance/">industry-specific guidance</a> that applies to your business to protect your workers and customers</li></ul>
+<ul><li>The <a href="https://files.covid19.ca.gov/pdf/employer-playbook-for-safe-reopening--en.pdf">employer playbook</a> to help plan and prepare your business for reopening.</li><li><a href="https://saferatwork.covid19.ca.gov/employers/#employer-portal">Industry-specific guidance</a> through the employer portal. Answer a few questions and receive tailored guidance for your business to protect your workers and customers.</li></ul>
 
 
 
@@ -433,7 +433,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>Follow the <a href="https://covid19.ca.gov/industry-guidance/">industry-specific guidance</a> for your industry or business. No matter what type of business you have:</p>
+            <p>Follow the <a href="https://saferatwork.covid19.ca.gov/employers/#employer-portal" data-type="URL" data-id="https://saferatwork.covid19.ca.gov/employers/#employer-portal">industry-specific guidance</a> for your industry or business. No matter what type of business you have:</p>
 <ul><li>Tell employees to stay home if they are sick.<ul><li>Implement sick leave policies to support that.</li><li>There are government programs supporting <a href="https://www.dir.ca.gov/dlse/Comparison-COVID-19-Paid-Leave.html">COVID-19 sick leave</a> and <a href="https://www.labor.ca.gov/coronavirus2019/#chart">workers&#8217; compensation</a>.</li></ul></li><li>Routinely clean the workplace.</li><li>Reduce travel. Encourage video conferencing and limit large gatherings.</li><li>Follow <a href="https://www.dir.ca.gov/dosh/coronavirus/General-Industry.html">Cal/OSHA interim general guidelines</a> on protecting workers from COVID-19.</li><li>Follow <a href="https://www.cdc.gov/coronavirus/2019-ncov/downloads/workplace-school-and-home-guidance.pdf">CDC guidance on keeping the workplace safe</a> (PDF).</li></ul>
 
                   </div>
