--- a/childcare/index.html
+++ b/childcare/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Find childcare options near you</h1>
           
-            <p class="small-text">Last updated&nbsp;March 9, 2021 at 9:23 AM</p>
+            <p class="small-text">Last updated&nbsp;March 10, 2021 at 3:40 PM</p>
           
         </div>
       </div>
@@ -169,7 +169,7 @@
 
 
 
-<h2 id="find">Find childcare&nbsp;</h2>
+<h2 id="find">Find childcare</h2>
 
 
 
