Update page - notify-privacy.html 7566a0cfd57f334d00f6cf431e5e76780012bb18

--- a/notify-privacy/index.html
+++ b/notify-privacy/index.html
@@ -149,7 +149,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>CA Notify</h1>
           
-            <p class="small-text">Last updated&nbsp;January 7, 2021 at 9:03 AM</p>
+            <p class="small-text">Last updated&nbsp;March 10, 2021 at 3:44 PM</p>
           
         </div>
       </div>
@@ -170,7 +170,7 @@
 
 
 
-<p>This Privacy Policy describes how the California Department of Public Health (CDPH) protects the privacy of people using the new exposure notification system – CA Notify. The policy explains how the data collected through CA Notify is stored and processed, and the choices available to the users in terms of usage. </p>
+<p>This Privacy Policy describes how the California Department of Public Health (CDPH) protects the privacy of people using the new exposure notification system – CA Notify. The policy explains how the data collected through CA Notify is stored and processed, and the choices available to the users in terms of usage.&nbsp;</p>
 
 
 
@@ -182,15 +182,15 @@
 
 
 
-<p>CA Notify allows users to send and receive notifications of a potential high-risk exposure to COVID-19, in a privacy-preserving manner. The notifications will include instructions on next steps to take. </p>
+<p>CA Notify allows users to send and receive notifications of a potential high-risk exposure to COVID-19, in a privacy-preserving manner. The notifications will include instructions on next steps to take.&nbsp;</p>
 
 
 
-<p>The exposure notifications are intended to complement the conventional contact tracing efforts undertaken by local public health authorities involving contact by a caseworker. </p>
+<p>The exposure notifications are intended to complement the conventional contact tracing efforts undertaken by local public health authorities involving contact by a caseworker.&nbsp;</p>
 
 
 
-<h3>How it works&nbsp;&nbsp;&nbsp;&nbsp;</h3>
+<h3>How it works</h3>
 
 
 
@@ -202,11 +202,11 @@
 
 
 
-<p>A user who tests positive for COVID-19 may choose to notify other CA Notify users who have been near the user. To trigger such notification, the COVID-19 positive user must enter a valid verification code provided by the CDPH, CA Notify call center, local public health authority, or other provider authorized by CDPH. </p>
+<p>A user who tests positive for COVID-19 may choose to notify other CA Notify users who have been near the user. To trigger such notification, the COVID-19 positive user must enter a valid verification code provided by the CDPH, CA Notify call center, local public health authority, or other provider authorized by CDPH.&nbsp;</p>
 
 
 
-<p>Several times a day, the app downloads a list of all the anonymous keys associated with positive COVID-19 cases that have elected to share their keys. The user&#8217;s device checks these keys against the list of keys it has encountered in the past 14 days. If there is a match, and the date, duration, and proximity align with the public health authority’s risk model to indicate a possible exposure to the virus, the user will receive an exposure notification.</p>
+<p>Several times a day, the app downloads a list of all the anonymous keys associated with positive COVID-19 cases that have elected to share their keys.&nbsp;The user&#8217;s device checks these keys against the list of keys it has encountered in the past 14 days. If there is a match, and the date, duration, and proximity align with the public health authority’s risk model to indicate a possible exposure to the virus, the user will receive an exposure notification.</p>
 
 
 
@@ -234,7 +234,7 @@
 
 
 
-<p>Users may disable CA Notify at any time by uninstalling the app (Android), turning off the feature (iOS), turning off the mobile device, or turning off the Bluetooth function. If the user uninstalls or deactivates CA Notify all keys currently stored on the device will be immediately deleted.</p>
+<p>Users may disable CA Notify at any time by uninstalling the app (Android), turning off the feature (iOS), turning off the mobile device, or turning off the Bluetooth function.&nbsp;If the user uninstalls or deactivates CA Notify all keys currently stored on the device will be immediately deleted.</p>
 
 
 
