--- a/ko/safer-economy/index.html
+++ b/ko/safer-economy/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>더욱 안전한 경제</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 10일 오후 5:43</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 11일 오전 7:37</p>
           
         </div>
       </div>
