--- a/safer-economy/index.html
+++ b/safer-economy/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Blueprint for a Safer Economy</h1>
           
-            <p class="small-text">Last updated&nbsp;March 10, 2021 at 5:43 PM</p>
+            <p class="small-text">Last updated&nbsp;March 11, 2021 at 7:37 AM</p>
           
         </div>
       </div>
