--- a/ko/housing-for-agricultural-workers/index.html
+++ b/ko/housing-for-agricultural-workers/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>농업 근로자를 위한 거처</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 2월 18일 오후 1:30</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 9일 오후 5:12</p>
           
         </div>
       </div>
@@ -233,7 +233,7 @@
 
 
 
-<p>지역 관리자가 되기를 희망하는 해당 카운티나 조직은 <a href="mailto:cdfa.emergency_response@cdfa.ca.gov">cdfa.emergency_response@cdfa.ca.gov</a>에 문의하십시오. 더 자세한 사항은 본 <a href="https://files.covid19.ca.gov/pdf/Housing_for_the_Harvest-Program_Overview.pdf">프로그램 개요(PDF)</a>에서 확인하십시오.</p>
+<p>지역 관리자가 되기를 희망하는 해당 카운티나 조직은 <a href="mailto:cdfa.emergency_response@cdfa.ca.gov">cdfa.emergency_response@cdfa.ca.gov</a>에 문의하십시오. 더 자세한 사항은 본 <a href="https://files.covid19.ca.gov/pdf/Housing_for_the_Harvest-Program_Overview.pdf">프로그램 개요</a>에서 확인하십시오.</p>
 
 
 
