--- a/tl/housing-for-agricultural-workers/index.html
+++ b/tl/housing-for-agricultural-workers/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Pabahay para sa mga manggagawa sa agrikultura</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Pebrero 18, 2021 sa 1:30 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Marso 9, 2021 sa 5:12 PM</p>
           
         </div>
       </div>
@@ -233,7 +233,7 @@
 
 
 
-<p>Kung gusto ng iyong county o organisasyon na maging isang lokal na tagapangasiwa, makipag-ugnayan sa <a href="mailto:cdfa.emergency_response@cdfa.ca.gov">cdfa.emergency_response@cdfa.ca.gov</a>. Makakakita ng higit pang detalye sa <a href="https://files.covid19.ca.gov/pdf/Housing_for_the_Harvest-Program_Overview.pdf">Pangkalahatang-ideya ng Programa (PDF)</a> na ito.</p>
+<p>Kung gusto ng iyong county o organisasyon na maging isang lokal na tagapangasiwa, makipag-ugnayan sa <a href="mailto:cdfa.emergency_response@cdfa.ca.gov">cdfa.emergency_response@cdfa.ca.gov</a>. Makakakita ng higit pang detalye sa <a href="https://files.covid19.ca.gov/pdf/Housing_for_the_Harvest-Program_Overview.pdf">Pangkalahatang-ideya ng Programa</a> na ito.</p>
 
 
 
