--- a/vi/housing-for-agricultural-workers/index.html
+++ b/vi/housing-for-agricultural-workers/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Nhà ở dành cho người lao động trong ngành nông nghiệp</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;18 tháng 2, 2021 lúc 13:30</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;9 tháng 3, 2021 lúc 17:12</p>
           
         </div>
       </div>
@@ -235,7 +235,7 @@
 
 
 
-<p>Nếu quận hoặc tổ chức của quý vị muốn trở thành cơ quan quản lý địa phương, vui lòng liên hệ <a href="mailto:cdfa.emergency_response@cdfa.ca.gov">cdfa.emergency_response@cdfa.ca.gov</a>. Xem thêm thông tin chi tiết trong bản <a href="https://files.covid19.ca.gov/pdf/Housing_for_the_Harvest-Program_Overview.pdf">Tổng Quan Chương Trình (PDF)</a> này.</p>
+<p>Nếu quận hoặc tổ chức của quý vị muốn trở thành cơ quan quản lý địa phương, vui lòng liên hệ <a href="mailto:cdfa.emergency_response@cdfa.ca.gov">cdfa.emergency_response@cdfa.ca.gov</a>. Xem thêm thông tin chi tiết trong bản <a href="https://files.covid19.ca.gov/pdf/Housing_for_the_Harvest-Program_Overview.pdf">Tổng Quan Chương Trình</a> này.</p>
 
 
 
