--- a/zh-hant/housing-for-agricultural-workers/index.html
+++ b/zh-hant/housing-for-agricultural-workers/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>為農業勞工提供的住房</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年2月18日, 下午1:30</p>
+            <p class="small-text">最近更新&nbsp;2021年3月9日, 下午5:12</p>
           
         </div>
       </div>
@@ -233,7 +233,7 @@
 
 
 
-<p>如果您所在的縣或組織有意成為地方管理者，請聯絡<a href="mailto:cdfa.emergency_response@cdfa.ca.gov">cdfa.emergency_response@cdfa.ca.gov</a>。請參閱此<a href="https://files.covid19.ca.gov/pdf/Housing_for_the_Harvest-Program_Overview.pdf">計劃概要 (PDF)</a>，以獲取更多詳情。</p>
+<p>如果您所在的縣或組織有意成為地方管理者，請聯絡<a href="mailto:cdfa.emergency_response@cdfa.ca.gov">cdfa.emergency_response@cdfa.ca.gov</a>。請參閱此<a href="https://files.covid19.ca.gov/pdf/Housing_for_the_Harvest-Program_Overview.pdf">計劃概要</a>，以獲取更多詳情。</p>
 
 
 
