--- a/zh-hans/housing-for-agricultural-workers/index.html
+++ b/zh-hans/housing-for-agricultural-workers/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>为农业劳工提供的住房</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年2月18日, 下午1:30</p>
+            <p class="small-text">最后更新时间&nbsp;2021年3月9日, 下午5:12</p>
           
         </div>
       </div>
@@ -233,7 +233,7 @@
 
 
 
-<p>如果您所在的县或组织有意成为地方管理者，请联络<a href="mailto:cdfa.emergency_response@cdfa.ca.gov">cdfa.emergency_response@cdfa.ca.gov</a>。请在此<a href="https://files.covid19.ca.gov/pdf/Housing_for_the_Harvest-Program_Overview.pdf">计划概述 (PDF)</a> 中查看更多详情。</p>
+<p>如果您所在的县或组织有意成为地方管理者，请联络<a href="mailto:cdfa.emergency_response@cdfa.ca.gov">cdfa.emergency_response@cdfa.ca.gov</a>。请在此<a href="https://files.covid19.ca.gov/pdf/Housing_for_the_Harvest-Program_Overview.pdf">计划概述</a>中查看更多详情。</p>
 
 
 
