Update translation - 104387567 (#3628) e79d17df44f598a0f1f2f7d3b3a27570cda4068f

--- a/ar/guide-immigrant-californians/index.html
+++ b/ar/guide-immigrant-californians/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>مساعدة المهاجرين</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;11:23 ص الساعة 24 فبراير 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;4:18 م الساعة 9 مارس 2021</p>
           
         </div>
       </div>
@@ -249,7 +249,7 @@
 
 
 
-<p>سيساعدك <a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">دليل سكان كاليفورنيا من المهاجرين أثناء جائحة كوفيد-19 (PDF)</a> في البقاء بأمان وعلى اطلاع. يمكن تحديث الدليل مع مرور الوقت.</p>
+<p>سيساعدك <a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">دليل سكان كاليفورنيا من المهاجرين أثناء جائحة كوفيد-19</a> في البقاء بأمان وعلى اطلاع. يمكن تحديث الدليل مع مرور الوقت.</p>
 
 
 
@@ -313,7 +313,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>راجع <a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">دليل سكان كاليفورنيا من المهاجرين (PDF)</a>. تجد به معلومات حول الوظائف والأجور والإعانات ودعم الأعمال التجارية الصغيرة والدعم السكني.</p>
+            <p>راجع <a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">دليل سكان كاليفورنيا من المهاجرين</a>. تجد به معلومات حول الوظائف والأجور والإعانات ودعم الأعمال التجارية الصغيرة والدعم السكني.</p>
 
                   </div>
                 </div>
