--- a/tl/guide-immigrant-californians/index.html
+++ b/tl/guide-immigrant-californians/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Tulong para sa mga immigrant</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Pebrero 24, 2021 sa 11:23 AM</p>
+            <p class="small-text">Huling na-update&nbsp;Marso 9, 2021 sa 4:18 PM</p>
           
         </div>
       </div>
@@ -249,7 +249,7 @@
 
 
 
-<p>Makakatulong sa iyo ang <a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">Gabay sa COVID-19 para sa Mga Immigrant na Californian (PDF)</a> na manatiling ligtas at updated. Puwedeng i-update ang gabay na ito sa paglipas ng panahon.</p>
+<p>Makakatulong sa iyo ang <a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">Gabay sa COVID-19 para sa Mga Immigrant na Californian</a> na manatiling ligtas at updated. Puwedeng i-update ang gabay na ito sa paglipas ng panahon.</p>
 
 
 
@@ -313,7 +313,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>Tingnan ang <a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">Gabay para sa Mga Immigrant na Californian (PDF)</a>. Mayroon itong impormasyon tungkol sa mga trabaho, sahod, benepisyo, at suporta sa maliliit na negosyo at pabahay.</p>
+            <p>Tingnan ang <a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">Gabay para sa Mga Immigrant na Californian</a>. Mayroon itong impormasyon tungkol sa mga trabaho, sahod, benepisyo, at suporta sa maliliit na negosyo at pabahay.</p>
 
                   </div>
                 </div>
