--- a/zh-hans/guide-immigrant-californians/index.html
+++ b/zh-hans/guide-immigrant-californians/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>为移民提供的援助</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年2月24日, 上午11:23</p>
+            <p class="small-text">最后更新时间&nbsp;2021年3月9日, 下午4:18</p>
           
         </div>
       </div>
@@ -249,7 +249,7 @@
 
 
 
-<p><a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">为加州移民提供的COVID-19指引 (PDF)</a> 将帮助您保持安全并了解最新消息。该指引可能会在之后进行更新。</p>
+<p><a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">为加州移民提供的COVID-19指引</a> 将帮助您保持安全并了解最新消息。该指引可能会在之后进行更新。</p>
 
 
 
@@ -313,7 +313,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>请查看<a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">加州移民指引 (PDF)</a>。其包含有关于工作、薪酬、福利、小企业支持以及住房支持的信息。</p>
+            <p>请查看<a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">加州移民指引</a>。其包含有关于工作、薪酬、福利、小企业支持以及住房支持的信息。</p>
 
                   </div>
                 </div>
