--- a/es/guide-immigrant-californians/index.html
+++ b/es/guide-immigrant-californians/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Ayuda para inmigrantes</h1>
           
-            <p class="small-text">Última actualización&nbsp;24 de febrero de 2021 a las 11:23 a. m.</p>
+            <p class="small-text">Última actualización&nbsp;9 de marzo de 2021 a las 4:18 p. m.</p>
           
         </div>
       </div>
@@ -313,7 +313,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>Consulte la <a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">Guía para los californianos inmigrantes (PDF)</a>. Contiene información sobre empleos, salarios, beneficios y apoyo a pequeñas empresas y para vivienda.</p>
+            <p>Consulte la <a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">Guía para los californianos inmigrantes</a>. Contiene información sobre empleos, salarios, beneficios y apoyo a pequeñas empresas y para vivienda.</p>
 
                   </div>
                 </div>
