--- a/ko/guide-immigrant-californians/index.html
+++ b/ko/guide-immigrant-californians/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>이민자를 위한 지원</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 2월 24일 오전 11:23</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 9일 오후 4:18</p>
           
         </div>
       </div>
@@ -249,7 +249,7 @@
 
 
 
-<p><a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">캘리포니아주 이민자를 위한 COVID-19 지침서(PDF)</a>는 안전한 생활과 꾸준한 정보 확인을 도와드릴 것입니다. 안내 내용은 앞으로 계속 업데이트될 수 있습니다.</p>
+<p><a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">캘리포니아주 이민자를 위한 COVID-19 지침</a>은 안전한 생활과 꾸준한 정보 확인을 도와드릴 것입니다. 안내 내용은 앞으로 계속 업데이트될 수 있습니다.</p>
 
 
 
@@ -313,7 +313,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p><a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">캘리포니아주 이민자를 위한 안내(PDF)</a>를 확인하십시오. 일자리, 임금, 혜택 및 중소기업과 주거 지원에 관한 정보가 나와 있습니다.</p>
+            <p><a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">캘리포니아주 이민자를 위한 안내</a>를 확인하십시오. 일자리, 임금, 혜택 및 중소기업과 주거 지원에 관한 정보가 나와 있습니다.</p>
 
                   </div>
                 </div>
