--- a/vi/guide-immigrant-californians/index.html
+++ b/vi/guide-immigrant-californians/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Hỗ trợ người nhập cư</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;24 tháng 2, 2021 lúc 11:23</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;9 tháng 3, 2021 lúc 16:18</p>
           
         </div>
       </div>
@@ -251,7 +251,7 @@
 
 
 
-<p><a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">Hướng Dẫn dành cho Người Nhập Cư California (PDF)</a> sẽ giúp quý vị được an toàn và có đầy đủ thông tin. Hướng dẫn này có thể được cập nhật theo thời gian.</p>
+<p><a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">Hướng Dẫn dành cho Người Nhập Cư California trong Đại Dịch COVID-19</a> sẽ giúp quý vị được an toàn và có đầy đủ thông tin. Hướng dẫn này có thể được cập nhật theo thời gian.</p>
 
 
 
@@ -315,7 +315,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>Hãy tham khảo <a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">Hướng Dẫn dành cho Người Nhập Cư California (PDF)</a>. Trong web này chứa các thông tin về công việc, tiền lương, trợ cấp và chương trình hỗ trợ nhà ở và doanh nghiệp nhỏ.</p>
+            <p>Hãy tham khảo <a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">Hướng Dẫn dành cho Người Nhập Cư California</a>. Hướng dẫn này chứa các thông tin về công việc, tiền lương, phúc lợi và chương trình hỗ trợ nhà ở và doanh nghiệp nhỏ.</p>
 
                   </div>
                 </div>
