--- a/zh-hant/guide-immigrant-californians/index.html
+++ b/zh-hant/guide-immigrant-californians/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>為移民提供的援助</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年2月24日, 上午11:23</p>
+            <p class="small-text">最近更新&nbsp;2021年3月9日, 下午4:18</p>
           
         </div>
       </div>
@@ -249,7 +249,7 @@
 
 
 
-<p><a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">為加州移民提供的COVID-19指南 (PDF)</a> 將幫助您保持安全和了解最新資訊。該指南可能會在之後進行更新。</p>
+<p><a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">為加州移民提供的COVID-19指南</a>將幫助您保持安全和了解最新資訊。該指南可能會在之後進行更新。</p>
 
 
 
@@ -313,7 +313,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>請查閱<a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">加州移民指南 (PDF)</a>。其中包括關於工作、工資、福利、小商業和住房支援的資訊。</p>
+            <p>請查閱<a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">加州移民指南</a>。其中包括關於工作、工資、福利、小商業和住房支援的資訊。</p>
 
                   </div>
                 </div>
