--- a/zh-hans/manage-stress-for-health/index.html
+++ b/zh-hans/manage-stress-for-health/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>为保持健康请进行压力管理</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年2月23日, 下午2:42</p>
+            <p class="small-text">最后更新时间&nbsp;2021年3月9日, 下午4:12</p>
           
         </div>
       </div>
@@ -185,7 +185,7 @@
 
 
 
-<ul><li><a href="https://files.covid19.ca.gov/pdf/wp/california-surgeon-general_stress-busting-playbook--zh-hans.pdf"><strong>加州卫生局局长手册：在COVID-19期间缓解压力</strong></a><strong> </strong>(PDF)<br>此指引说明了您可以采取哪些日常措施来支持您的身心健康。 </li><li><a href="https://www.uclahealth.org/marc/ucla-mindful-app"><strong>UCLA Mindful</strong></a>（应用程序）<br>利用此免费应用程序进行正念练习。借此可以减轻压力感，以及支持您的身心健康。</li><li><a href="https://www.anxietycanada.com/resources/mindshift-cbt/"><strong>Mindshift</strong></a>（应用程序）<br>利用此免费应用程序上的资源控制焦虑。</li></ul>
+<ul><li><a href="https://files.covid19.ca.gov/pdf/wp/california-surgeon-general_stress-busting-playbook--zh-hans.pdf"><strong>加州卫生局局长手册：在COVID-19期间缓解压力</strong></a><br>此指引说明了您可以采取哪些日常措施来支持您的身心健康。 </li><li><a href="https://www.uclahealth.org/marc/ucla-mindful-app"><strong>UCLA Mindful</strong></a>（应用程序）<br>利用此免费应用程序进行正念练习。借此可以减轻压力感，以及支持您的身心健康。</li><li><a href="https://www.anxietycanada.com/resources/mindshift-cbt/"><strong>Mindshift</strong></a>（应用程序）<br>利用此免费应用程序上的资源控制焦虑。</li></ul>
 
 
 
@@ -233,7 +233,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <ul><li><a href="https://files.covid19.ca.gov/pdf/caregivers_and_kids_california_surgeon_general_stress_busting_playbook_draft_v2_clean_ada_04072020v2.pdf"><strong>加州卫生局局长手册：在COVID-19疫情期间缓解照护者和子女的压力</strong></a> (PDF)<br>此指引说明了有哪些压力征兆及如何保护您家人的健康。该指引亦提供以下语言版本：<ul><li><a href="https://files.covid19.ca.gov/pdf/wp/osg-caregivers-and-kids-playbook_arabic-2.pdf">阿拉伯文</a></li><li>中文（<a href="https://files.covid19.ca.gov/pdf/wp/osg-caregivers-and-kids-playbook_ch_simplified.pdf">简体中文</a>和<a href="https://files.covid19.ca.gov/pdf/wp/osg-caregivers-and-kids-playbook_zh-hant.pdf">繁体中文</a>）</li><li><a href="https://files.covid19.ca.gov/pdf/wp/osg-caregivers-and-kids-playbook_korean.pdf">韩文</a></li><li><a href="https://files.covid19.ca.gov/pdf/wp/osg-caregivers-and-kids-playbook-spanish.pdf">西班牙文</a></li><li><a href="https://files.covid19.ca.gov/pdf/wp/osg-caregivers-and-kids-playbook_tagalog.pdf">他加禄文</a></li><li><a href="https://files.covid19.ca.gov/pdf/wp/osg-caregivers-and-kids-playbook_vi.pdf">越南文</a></li></ul></li><li><a href="https://www.youtube.com/watch?v=57EAL_e5Nf0"><strong>让家长了解创伤：在疫情期间帮助成人及儿童治疗创伤</strong></a>（视频）<br>加州卫生局局长提供帮助儿童治疗创伤及缓解压力的工具。</li><li><a href="https://www.childtrends.org/publications/resources-for-supporting-childrens-emotional-well-being-during-the-covid-19-pandemic"><strong>在COVID-19疫情期间保持情绪健康</strong></a>（指引）<br>利用这些建议来帮助子女调整心态，适应疫情。</li></ul>
+            <ul><li><a href="https://files.covid19.ca.gov/pdf/caregivers_and_kids_california_surgeon_general_stress_busting_playbook_draft_v2_clean_ada_04072020v2.pdf"><strong>加州卫生局局长手册：在COVID-19疫情期间缓解照护者和子女的压力</strong></a><br>此指引说明了有哪些压力征兆及如何保护您家人的健康。该指引亦提供以下语言版本：<ul><li><a href="https://files.covid19.ca.gov/pdf/wp/osg-caregivers-and-kids-playbook_arabic-2.pdf">阿拉伯文</a></li><li>中文（<a href="https://files.covid19.ca.gov/pdf/wp/osg-caregivers-and-kids-playbook_ch_simplified.pdf">简体中文</a>和<a href="https://files.covid19.ca.gov/pdf/wp/osg-caregivers-and-kids-playbook_zh-hant.pdf">繁体中文</a>）</li><li><a href="https://files.covid19.ca.gov/pdf/wp/osg-caregivers-and-kids-playbook_korean.pdf">韩文</a></li><li><a href="https://files.covid19.ca.gov/pdf/wp/osg-caregivers-and-kids-playbook-spanish.pdf">西班牙文</a></li><li><a href="https://files.covid19.ca.gov/pdf/wp/osg-caregivers-and-kids-playbook_tagalog.pdf">他加禄文</a></li><li><a href="https://files.covid19.ca.gov/pdf/wp/osg-caregivers-and-kids-playbook_vi.pdf">越南文</a></li></ul></li><li><a href="https://www.youtube.com/watch?v=57EAL_e5Nf0"><strong>让家长了解创伤：在疫情期间帮助成人及儿童治疗创伤</strong></a>（视频）<br>加州卫生局局长提供帮助儿童治疗创伤及缓解压力的工具。</li><li><a href="https://www.childtrends.org/publications/resources-for-supporting-childrens-emotional-well-being-during-the-covid-19-pandemic"><strong>在COVID-19疫情期间保持情绪健康</strong></a>（指引）<br>利用这些建议来帮助子女调整心态，适应疫情。</li></ul>
 
                   </div>
                 </div>
