--- a/zh-hant/manage-stress-for-health/index.html
+++ b/zh-hant/manage-stress-for-health/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>為保持健康請進行壓力管理</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年2月23日, 下午2:42</p>
+            <p class="small-text">最近更新&nbsp;2021年3月9日, 下午4:12</p>
           
         </div>
       </div>
@@ -185,7 +185,7 @@
 
 
 
-<ul><li><a href="https://files.covid19.ca.gov/pdf/wp/california-surgeon-general_stress-busting-playbook--zh-hant.pdf"><strong>加州衛生局局長手冊：在COVID-19期間緩解壓力</strong></a><strong> </strong>(PDF)<br>此指引說明了您可以採取哪些日常措施來支援您的身心健康。 </li><li><a href="https://www.uclahealth.org/marc/ucla-mindful-app"><strong>UCLA Mindful</strong></a>（應用程式）<br>利用此免費應用程式進行正念練習。藉此可以減輕壓力感，以及支援您的身心健康。</li><li><a href="https://www.anxietycanada.com/resources/mindshift-cbt/"><strong>Mindshift</strong></a>（應用程式）<br>利用此免費應用程式上的資源控制焦慮。</li></ul>
+<ul><li><a href="https://files.covid19.ca.gov/pdf/wp/california-surgeon-general_stress-busting-playbook--zh-hant.pdf"><strong>加州衛生局局長手冊：在COVID-19期間緩解壓力</strong></a><br>此指引說明了您可以採取哪些日常措施來支援您的身心健康。 </li><li><a href="https://www.uclahealth.org/marc/ucla-mindful-app"><strong>UCLA Mindful</strong></a>（應用程式）<br>利用此免費應用程式進行正念練習。藉此可以減輕壓力感，以及支援您的身心健康。</li><li><a href="https://www.anxietycanada.com/resources/mindshift-cbt/"><strong>Mindshift</strong></a>（應用程式）<br>利用此免費應用程式上的資源控制焦慮。</li></ul>
 
 
 
@@ -233,7 +233,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <ul><li><a href="https://files.covid19.ca.gov/pdf/caregivers_and_kids_california_surgeon_general_stress_busting_playbook_draft_v2_clean_ada_04072020v2.pdf"><strong>加州衛生局局長手冊：在COVID-19疫情期間緩解照護者和子女的壓力 </strong></a>(PDF)<br>此指引說明了有哪些壓力徵兆及如何保護您家人的健康。該指引亦提供以下語言版本：<ul><li><a href="https://files.covid19.ca.gov/pdf/wp/osg-caregivers-and-kids-playbook_arabic-2.pdf">阿拉伯文</a></li><li>中文（<a href="https://files.covid19.ca.gov/pdf/wp/osg-caregivers-and-kids-playbook_ch_simplified.pdf">簡體中文</a>和<a href="https://files.covid19.ca.gov/pdf/wp/osg-caregivers-and-kids-playbook_zh-hant.pdf">繁體中文</a>）</li><li><a href="https://files.covid19.ca.gov/pdf/wp/osg-caregivers-and-kids-playbook_korean.pdf">韓文</a></li><li><a href="https://files.covid19.ca.gov/pdf/wp/osg-caregivers-and-kids-playbook-spanish.pdf">西班牙文</a></li><li><a href="https://files.covid19.ca.gov/pdf/wp/osg-caregivers-and-kids-playbook_tagalog.pdf">他加祿文</a></li><li><a href="https://files.covid19.ca.gov/pdf/wp/osg-caregivers-and-kids-playbook_vi.pdf">越南文</a></li></ul></li><li><a href="https://www.youtube.com/watch?v=57EAL_e5Nf0"><strong>對創傷知情的家長：幫助成人和兒童在疫情期間治療創傷</strong></a>（影片）<br>加州衛生局局長提供幫助兒童治療創傷及緩解壓力的工具。</li><li><a href="https://www.childtrends.org/publications/resources-for-supporting-childrens-emotional-well-being-during-the-covid-19-pandemic"><strong>在COVID-19疫情期間保持情緒健康</strong></a>（指引）<br>利用這些建議來幫助子女調整心態，適應疫情。</li></ul>
+            <ul><li><a href="https://files.covid19.ca.gov/pdf/caregivers_and_kids_california_surgeon_general_stress_busting_playbook_draft_v2_clean_ada_04072020v2.pdf"><strong>加州衛生局局長手冊：在COVID-19疫情期間緩解照護者和子女的壓力</strong></a><br>此指引說明了有哪些壓力徵兆及如何保護您家人的健康。該指引亦提供以下語言版本：<ul><li><a href="https://files.covid19.ca.gov/pdf/wp/osg-caregivers-and-kids-playbook_arabic-2.pdf">阿拉伯文</a></li><li>中文（<a href="https://files.covid19.ca.gov/pdf/wp/osg-caregivers-and-kids-playbook_ch_simplified.pdf">簡體中文</a>和<a href="https://files.covid19.ca.gov/pdf/wp/osg-caregivers-and-kids-playbook_zh-hant.pdf">繁體中文</a>）</li><li><a href="https://files.covid19.ca.gov/pdf/wp/osg-caregivers-and-kids-playbook_korean.pdf">韓文</a></li><li><a href="https://files.covid19.ca.gov/pdf/wp/osg-caregivers-and-kids-playbook-spanish.pdf">西班牙文</a></li><li><a href="https://files.covid19.ca.gov/pdf/wp/osg-caregivers-and-kids-playbook_tagalog.pdf">他加祿文</a></li><li><a href="https://files.covid19.ca.gov/pdf/wp/osg-caregivers-and-kids-playbook_vi.pdf">越南文</a></li></ul></li><li><a href="https://www.youtube.com/watch?v=57EAL_e5Nf0"><strong>對創傷知情的家長：幫助成人和兒童在疫情期間治療創傷</strong></a>（影片）<br>加州衛生局局長提供幫助兒童治療創傷及緩解壓力的工具。</li><li><a href="https://www.childtrends.org/publications/resources-for-supporting-childrens-emotional-well-being-during-the-covid-19-pandemic"><strong>在COVID-19疫情期間保持情緒健康</strong></a>（指引）<br>利用這些建議來幫助子女調整心態，適應疫情。</li></ul>
 
                   </div>
                 </div>
