Update translation - 104427310 (#3625) d17f6a019500bf2f90e31a2cff83af0df5843936

--- a/tl/help-for-seniors/index.html
+++ b/tl/help-for-seniors/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Tulong para sa mga nakakatanda</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Marso 2, 2021 sa 4:34 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Marso 10, 2021 sa 1:58 PM</p>
           
         </div>
       </div>
@@ -189,7 +189,7 @@
 
 
 
-<p>Makakakuha ang mga nakatatanda sa California ng tatlong libreng pang-restaurant na pagkain sa pamamagitan ng <strong>Great Plates Delivered</strong>. Nagbibigay-daan sa mga senior ang programang ito para sa delivery sa tahanan na manatiling ligtas sa bahay sa panahon ng pandemya. Sa kasalukuyan, awtorisado ito hanggang Marso 8, 2021.</p>
+<p>Makakakuha ang mga nakatatanda sa California ng tatlong libreng pang-restaurant na pagkain sa pamamagitan ng <strong>Great Plates Delivered</strong>. Nagbibigay-daan sa mga senior ang programang ito para sa delivery sa tahanan na manatiling ligtas sa bahay sa panahon ng pandemya. Sa kasalukuyan, awtorisado ito hanggang Abril 7, 2021.</p>
 
 
 
