--- a/ar/help-for-seniors/index.html
+++ b/ar/help-for-seniors/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>مساعدة كبار السن</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;4:34 م الساعة 2 مارس 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;1:58 م الساعة 10 مارس 2021</p>
           
         </div>
       </div>
@@ -189,7 +189,7 @@
 
 
 
-<p>ويستطيع كبار السن في كاليفورنيا أن يحصلوا على ثلاث وجبات مجانية بجودة أكل المطاعم من خلال برنامج <strong>Great Plates Delivered</strong>. يساعد برنامج توصيل الوجبات إلى المنازل كبار السن على البقاء بأمان في المنزل أثناء الجائحة. وهو مصرح به حاليًا حتى 8 مارس 2021.</p>
+<p>ويستطيع كبار السن في كاليفورنيا أن يحصلوا على ثلاث وجبات مجانية بجودة أكل المطاعم من خلال برنامج <strong>Great Plates Delivered</strong>. يساعد برنامج توصيل الوجبات إلى المنازل كبار السن على البقاء بأمان في المنزل أثناء الجائحة. وهو مصرح به حاليًا حتى 7 أبريل 2021.</p>
 
 
 
