--- a/es/help-for-seniors/index.html
+++ b/es/help-for-seniors/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Ayuda para adultos mayores</h1>
           
-            <p class="small-text">Última actualización&nbsp;2 de marzo de 2021 a las 4:34 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;10 de marzo de 2021 a las 1:58 p. m.</p>
           
         </div>
       </div>
@@ -189,7 +189,7 @@
 
 
 
-<p>Los adultos mayores de California pueden obtener tres comidas gratis con calidad de restaurante a través de <strong>Great Plates Delivered</strong>. Este programa de entrega a domicilio ayuda a los adultos mayores a permanecer seguros en casa durante la pandemia. Actualmente está autorizado hasta el 8 de marzo de 2021.</p>
+<p>Los adultos mayores de California pueden obtener tres comidas gratis con calidad de restaurante a través de <strong>Great Plates Delivered</strong>. Este programa de entrega a domicilio ayuda a los adultos mayores a permanecer seguros en casa durante la pandemia. Actualmente está autorizado hasta el 7 de abril de 2021.</p>
 
 
 
